fix(styles): update scrollbar selector to target html element for proper visibility control

--- a/src/globals/styles/index.css
+++ b/src/globals/styles/index.css
@@ -140,6 +140,6 @@ button {
 }
 
 /* Clase para ocultar la barra de navegación */
-::-webkit-scrollbar {
+html::-webkit-scrollbar {
   display: none;
 }
